Renamed ESDS.mjs -> ESDS.js

--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "esds",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "ESDS.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jayalbo/ESDS.git"
   },
   "type": "module",
   "author": "",
