Fixed entry point path

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "esds",
   "version": "0.0.2",
   "description": "",
-  "main": "ESDS.mjs",
+  "main": "ESDS.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
