Added Trie update documentation

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "esds",
-  "version": "0.1.0",
-  "description": "ES6 JS lightweight data structures (Priority Queue, Queue, Stack, Linked-List)",
+  "version": "0.2.0",
+  "description": "ES6 JS lightweight data structures (Priority Queue, Trie, Queue, Stack, Linked-List)",
   "main": "ESDS.js",
   "bugs": {
     "url": "https://github.com/jayalbo/ESDS/issues"
@@ -11,6 +11,9 @@
     "heap",
     "queue",
     "stack",
+    "trie",
+    "prefix tree",
+    "digital tree",
     "list",
     "linked-list",
     "linked list",
