--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "data structures"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "repository": {
     "type": "git",
@@ -44,6 +44,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "jest": "^27.2.1",
     "xxhash-wasm": "^0.4.1"
   }
 }
